[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiny_validate"
version = "0.1"
requires = ["shiny >= 0.6.0", "numpy"]
authors = [{name = "Gordon Shotwell", email = "gordon.shotwell@posit.co"}]

[tool.setuptools]
packages = ["shiny_validate"]
include-package-data = true
zip-safe = false