[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "shiny_validate"
version = "0.1.3"
authors = [{name = "Gordon Shotwell", email = "gordon.shotwell@posit.co"}]

[tool.setuptools]
packages = ["shiny_validate"]
include-package-data = true
zip-safe = false

[tool.poetry]
name = "shiny_validate"
version = "0.1.3"
authors = ["Gordon Shotwell <gordon.shotwell@posit.co>"]
description = "Input Validation for Shiny apps"
readme = "README.md"


[tool.poetry.dependencies]
shiny = ">=0.6"
python = "^3.8"

