[metadata]
name = shiny_validate
version = 0.1
description = "Input Validation for Shiny apps"
long_description = file: README.md
long_description_content_type = text/markdown
author = Gordon Shotwell
author_email = gordon.shotwell@posit.co

[options]
packages = find:
install_requires = 
    shiny >= 0.6.0
    numpy